recursion.cons.lessons.recursion.cons.Nfirst.scala.error
nfirst:3: error: type mismatch;
 found   : Int
 required: List[Int]
	if(n == 1) return l.head
                            ^